tests/compile-fail/suzu_bare_on_type.rs
use suzunari_error::*;

#[suzunari_error]
#[suzu]
#[suzu(display("test"))]
struct MyError {}

fn main() {}
